[gd_scene load_steps=20 format=2]

[ext_resource path="res://BackgroundEffects/StarsBackground.png" type="Texture" id=1]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Flames/FlameStill1.png" type="Texture" id=2]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Smoke/Cosmic_23.png" type="Texture" id=3]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Glows/haloflare.png" type="Texture" id=4]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Glows/Flare4.png" type="Texture" id=5]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Glows/Cosmic_24.png" type="Texture" id=6]
[ext_resource path="res://EffectLibrary/ParticleTextures2/Static/Symbols/circlesymbol1.png" type="Texture" id=7]
[ext_resource path="res://BackgroundEffects/BlackHoleStation.gd" type="Script" id=8]
[ext_resource path="res://BackgroundEffects/space-4222291_1280.jpg" type="Texture" id=9]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.00632911, 0.525316, 0.995781 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.427451, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color_ramp = SubResource( 6 )

[sub_resource type="CircleShape2D" id=9]
radius = 139.256

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 107.5
flag_disable_z = true
gravity = Vector3( 1, 1, 0 )
initial_velocity = 100.0
angular_velocity = 100.0
orbit_velocity = 0.3
orbit_velocity_random = 0.0
scale = 0.1

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float strength = 0.01;
uniform float black_radius = 0.65;

void fragment() {
    // Get direction and distance to the black hole center
    vec2 diff = vec2(0.5, 0.5) - vec2(UV.x, 1.0-UV.y);
    float d = length(diff) * 2.0;
    vec2 dir = normalize(diff);
    float f = clamp(1.0-d, 0.0, 1.0);

    // This is a 0..1 value that will nullify the effect around the bounds of the effect,
    // for a seamless transition between the effect's area and the unaffected world pixels.
    float shelf = smoothstep(0, 1, f);
    // Calculate displacement amount
    float displacement = strength / (d*d + 0.01);

    // Calculate distorted screen-space texture coordinates
    vec2 uv = SCREEN_UV + dir * (displacement * shelf);

    // Output pixels from the screen using distorted UVs
    vec3 col = texture(SCREEN_TEXTURE, uv).xyz;
    COLOR.rgb = mix(col, vec3(0,0,0), smoothstep(black_radius-0.01, black_radius+0.01, f));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/strength = 0.01
shader_param/black_radius = 0.65

[sub_resource type="Environment" id=8]
glow_enabled = true

[sub_resource type="ShaderMaterial" id=10]

[node name="Background" type="TextureRect"]
margin_left = -308.104
margin_top = -171.145
margin_right = 1611.9
margin_bottom = 908.855
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 875.281, 505.96 )
scale = Vector2( 1.20792, 1.22921 )
amount = 5
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Cosmic_23" type="Sprite" parent="Particles2D"]
visible = false
position = Vector2( -5.5994, -17.9237 )
scale = Vector2( 2.52456, 2.24688 )
texture = ExtResource( 3 )

[node name="Flare4" type="Sprite" parent="Particles2D"]
modulate = Color( 0.372549, 0.396078, 1, 1 )
position = Vector2( -1.93311, 1.04276 )
scale = Vector2( 1.4, 1.41543 )
texture = ExtResource( 5 )

[node name="Particles2D3" type="Particles2D" parent="."]
position = Vector2( 875.281, 505.96 )
scale = Vector2( 1.20792, 1.22921 )
amount = 5
process_material = SubResource( 7 )
texture = ExtResource( 6 )

[node name="Cosmic_23" type="Sprite" parent="Particles2D3"]
visible = false
position = Vector2( -5.5994, -17.9237 )
scale = Vector2( 2.52456, 2.24688 )
texture = ExtResource( 3 )

[node name="Flare4" type="Sprite" parent="Particles2D3"]
modulate = Color( 0.372549, 0.396078, 1, 1 )
position = Vector2( -1.93311, 1.04276 )
scale = Vector2( 1.4, 1.41543 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 874.84, 505.949 )
scale = Vector2( 1.20792, 1.22921 )

[node name="circlesymbol1" type="Sprite" parent="Area2D"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="Particles2D2" type="Particles2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0980392 )
position = Vector2( 870.263, 538.329 )
amount = 800
lifetime = 10.0
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="haloflare" type="Sprite" parent="."]
visible = false
modulate = Color( 0.364706, 0.419608, 1, 1 )
position = Vector2( 873.873, 502.538 )
scale = Vector2( 2.16159, 2.27086 )
texture = ExtResource( 4 )

[node name="Blackhole" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = 645.208
margin_top = 277.117
margin_right = 1104.21
margin_bottom = 735.117
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="DisembarkBackground" type="Sprite" parent="."]
modulate = Color( 0.443137, 0.423529, 0.560784, 1 )
material = SubResource( 10 )
position = Vector2( 825.962, 1089.33 )
scale = Vector2( 0.795437, 0.826072 )
texture = ExtResource( 9 )

[node name="DisembarkPosition" type="Position2D" parent="."]
position = Vector2( 817.514, 1086.5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 822.789, 464.137 )

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 817.514, 1086.5 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
